JBPM-7612: update shape label after name property update